# doum-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  COMMANDS.md  DEPLOYMENT.md  PROPOSALS.md  QUICKSTART.md  TODO.md
scripts/: install.ps1  install.sh
src/: lib.rs  main.rs
src/cli/: args.rs  ask.rs  auto_mode.rs  commands.rs  config.rs  menu.rs  mod.rs  secret.rs  suggest.rs  switch.rs  tui.rs  ui.rs
src/cli/config/: context.rs  llm.rs  logging.rs  main.rs  mod.rs  provider.rs
src/core/: ask.rs  auto_mode.rs  config.rs  mod.rs  secret.rs  suggest.rs  switch.rs
src/llm/: client.rs  mod.rs  parser.rs  presets.rs  prompt.rs  provider.rs  retry.rs
src/llm/anthropic/: client.rs  mod.rs  payloads.rs  secret.rs
src/llm/openai/: client.rs  mod.rs  payloads.rs  secret.rs
src/system/: config.rs  env.rs  error.rs  logging.rs  mod.rs  paths.rs  secret.rs
src/tools/: executor.rs  mod.rs
static/: config.toml
static/presets/: anthropic.toml  openai.toml
static/prompts/: ask.md  common.md  mode_select.md  suggest.md
tests/: config_tests.rs  parser_tests.rs
