[package]
name = "doum-cli"
version = "0.1.0"
edition = "2024"
authors = ["junhyungL"]
description = "AI-powered terminal assistant that helps you with command-line tasks."
license = "MIT"
repository = "https://github.com/junhyungL/doum-cli"
documentation = "https://github.com/junhyungL/doum-cli/blob/main/README.md"
keywords = ["cli", "terminal", "assistant", "ai", "llm"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
# CLI Parsing
clap = { version = "4.5", features = ["derive"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Templating
handlebars = "5.1"

# Embedding static files
rust-embed = "8.5"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# HTTP Client
reqwest = { version = "0.12", features = ["json"] }

# Filesystem and path handling
directories = "5.0"

# Terminal UI
ratatui = "0.29"
crossterm = "0.28"
dialoguer = "0.11"
console = "0.15"

# Clipboard support
arboard = "3.4"

# Progress bars and spinners
indicatif = "0.17"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
tracing-appender = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
